--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,38 @@ body {
 
 /* Information */
 
-.informasi .gratis {
-    color: #646464;
-    font-size: 13px;
+.information {
+    padding-top: 30px;
+    padding-bottom: 5px;
+    background-color: #ffffff;
 }
 
-.informasi .navbar-nav a {
+.information a {
+    font-size: 12px;
+    color: #646464;
+}
+
+.information ul li {
+    margin-right: 20px;
+    display: inline;
+}
+
+.information ul li img {
+    margin-top: -2px;
+    margin-left: -2px;
+    margin-right: 7px;
+}
+
+.information ul li a {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-radius: 0.3em;
+    color: #646464;
     font-size: 13px;
+    font-weight: 400;
+    text-decoration: none;
 }
 
 
