--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,12 @@ body {
     color: #646464;
 }
 
+.information .list {
+    margin-left: -35px;
+}
+
 .information ul li {
-    margin-right: 20px;
+    margin-right: 5px;
     display: inline;
 }
 
