--- a/css/style.css
+++ b/css/style.css
@@ -629,6 +629,11 @@ body {
     font-weight: 300;
 }
 
+.footer img {
+    margin-bottom: 15px;
+    height: 30px;
+}
+
 .footer ul.payment li {
     margin-right: 40px;
     display: inline;
